kubernetes/infrastructure/tailscale/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale
  labels:
    name: tailscale
    app.kubernetes.io/name: tailscale
    app.kubernetes.io/managed-by: argocd
